--- a/templates/anime_list.html
+++ b/templates/anime_list.html
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/register">注册</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about">关于我们</a>
+                        </li>
                     </ul>
                 </div>
             </div>
